# llm-chat-app

./: .dockerignore  .env.example  .gitattributes  .gitignore  PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  gunicorn.conf.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  wsgi.py
backend/app/application/: chat_service.py
backend/app/domain/: chat.py  ports.py  user.py
backend/app/infrastructure/: config.py
backend/app/infrastructure/db/: __init__.py  base.py  models.py  repositories.py  session.py
backend/app/infrastructure/llm/: __init__.py  mock.py
backend/app/interface/: deps.py  schemas.py
backend/app/interface/api/: chat.py  health.py
backend/tests/: conftest.py  test_chat_repository.py  test_chat_service.py
